--- a/templates/movie_detail.html
+++ b/templates/movie_detail.html
@@ -356,7 +356,6 @@ button[type="submit"]:hover {
             <p><strong>Director:</strong> {{ movie.director }}</p>
             <p><strong>Cast:</strong> {{ movie.cast }}</p>
         </div>
-        <a href="/recommend?movie_title={{ last_search }}" class="back-btn">Back to Recommendations</a>
-    </div>
+        <a href="/recommend?movie_title={{ last_search }}" class="back-btn">Back to Recommendations</a>    </div>
 </body>
 </html>
